Javalin Webserver (#166)
* Move webserver code into spark webserver and make webserver an abstract class

* FUnctions for handling configuring routes, setting ipaddr and port and configuring for https

* Finalize moving spark code into separate functions in a class

* Have static init in Webserver call getEnvironmentVariable

* Remove ip addr setting. Must be crazy and imagined it

* Stub Javalin webserver class

* Javalin configure exceptions

* Configure thread pool

* Log request times

* Use unsafeCfg to reference the javalin swever configuration because we're cool

* Probably implemented the auth checks function correctly

* Move all the old spark routes into its own folder

* Mustache handler helper function

* GetHome Route implemented but crashes galore

* Add kotlin support to pom, but jetty stuff is still borked and getting class not found exceptions still

* Try to exclude spark webserver stuff

* Can compile again by blasting all spark files

* Have environment variable be named WEBSERVER_STATIC_FILES

* Fixed static files error by marking location as external. Still just showing raw HTML though :v

* Javalin GetHoemRoute

* Stub a bunch of route classes to handle different routes

* Implemented login and logout post routes

* Create account and forgot password

* Update and reset password routes. Re-implemented Navbar class

* Aggregate routes

* Get airsync imports and uploads routes

* Remaining airsync routes implemented

* Tags routes

* Unassociated tags post route

* event management routes implemented

* More event routes implemented

* Flights javalin routes

* Half of the import upload routes implemented

* Remaining import upload routes. PostUpload might need to be double checked

* Profile and password routes added to Account routes

* User preferences routes

* user invites, reset/update password, update profile and user access routes implemented

* Event counts, metadata, stats routes

* Fix error in event javalin routes

* DoubleSeries rou